# msrlint

./: .gitattributes  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: main.rs
src/cli/: mod.rs
src/files/: mod.rs
src/linter/: mod.rs  rule.rs  rules.rs
src/linter/config/: mod.rs
src/linter/rules/: eqeqeq.rs  indent.rs  mod.rs  no_eval.rs  quotes.rs  semi.rs
test/: .confignoall.json  .eslintrc.js  .eslintrc.json  package.json
test/src/: index.js  people.json
test/src/myTestDir/anotherTestDir/: hidden.js
