[package]
name = "msrlint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.0.4", features = ["derive"]}
colored = "2"
serde = {version = "1.0.133", features = ["derive"]}
swc_atoms = {version = "0.2.9"}
swc_common = {version = "0.17.0", features = ["concurrent", "tty-emitter"]}
swc_ecma_ast = {version = "0.65.0"}
swc_ecma_lints = {version = "0.14.2"}
swc_ecma_parser = "0.88.3"
swc_ecma_utils = {version = "0.65.0"}
swc_ecma_visit = {version = "0.51.0"}
walkdir = "2.3.2"