[package]
name = "msrlint"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "A WIP replacement for ESLint."
repository = "https://github.com/mikaelsrozee/msrlint"
readme = "README.md"
keywords = ["lint", "linter", "javascript", "ecmascript", "cli"]
categories = ["command-line-utilities", "command-line-interface", "development-tools", "web-programming"]
exclude = ["/.github", "/test", ".*"]
publish = false

[dependencies]
clap = {version = "3.0.4", features = ["derive"]}
colored = "2"
serde = {version = "1.0.133", features = ["derive"]}
serde_json = {version = "1.0.79"}
serde_with = {version = "1.12.0"}
swc_atoms = {version = "0.2.9"}
swc_common = {version = "0.17.0", features = ["concurrent", "tty-emitter"]}
swc_ecma_ast = {version = "0.65.0"}
swc_ecma_lints = {version = "0.14.2"}
swc_ecma_parser = "0.88.3"
swc_ecma_utils = {version = "0.65.0"}
swc_ecma_visit = {version = "0.51.0"}
walkdir = "2.3.2"